--- a/app/views/visits/index.html.erb
+++ b/app/views/visits/index.html.erb
@@ -1,21 +1,21 @@
-<h1>URL Visits</h1>
+<h1 class="title is-size-4">URL Visits</h1>
 
-<% @visits.each do |visit| %>
-  <table>
-    <thead>
-      <tr>
-        <th>URL</th>
-        <th>IP</th>
-        <th>When</th>
-      </tr>
-    </thead>
+<table class="table is-fullwidth">
+  <thead>
+    <tr>
+      <th>URL</th>
+      <th>IP</th>
+      <th>When</th>
+    </tr>
+  </thead>
 
-    <tbody>
+  <tbody>
+    <% @visits.each do |visit| %>
       <tr>
         <td><%= visit.url.url %></td>
         <td><%= visit.ip %></td>
-        <td><%= visit.created_at %></td>
+        <td><%= I18n.l(visit.created_at) %></td>
       </tr>
-    </tbody>
-  </table>
-<% end %>
+    <% end %>
+  </tbody>
+</table>
