--- a/app/views/visits/index.html.erb
+++ b/app/views/visits/index.html.erb
@@ -1,6 +1,6 @@
-<h1 class="title is-size-4">URL Visits</h1>
+<h1 class="">URL Visits</h1>
 
-<table class="table is-fullwidth">
+<table class="">
   <thead>
     <tr>
       <th>URL</th>
