--- a/app/views/visits/index.html.erb
+++ b/app/views/visits/index.html.erb
@@ -1,21 +1,23 @@
-<h1 class="">URL Visits</h1>
+<div class="w-2/3 m-auto">
+  <h1 class="font-bold text-xl mb-8">URL Visits</h1>
 
-<table class="">
-  <thead>
-    <tr>
-      <th>URL</th>
-      <th>IP</th>
-      <th>When</th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @visits.each do |visit| %>
-      <tr>
-        <td><%= visit.url.url %></td>
-        <td><%= visit.ip %></td>
-        <td><%= I18n.l(visit.created_at) %></td>
+  <table class="w-full">
+    <thead>
+      <tr class="border-b-2 border-indigo-800">
+        <th class="pb-2">URL</th>
+        <th class="pb-2">IP</th>
+        <th class="pb-2">When</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+
+    <tbody>
+      <% @visits.each do |visit| %>
+        <tr>
+          <td class="p-2 text-center"><%= visit.url.url %></td>
+          <td class="p-2 text-center"><%= visit.ip %></td>
+          <td class="p-2 text-center"><%= I18n.l(visit.created_at) %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
