--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,11 @@
 
   <body class="bg-indigo-100">
     <div class="container mx-auto">
+      <nav class="w-2/3 m-auto mb-4 text-right text-sm">
+        <%= link_to "URLs", urls_path, class: "underline" %> |
+        <%= link_to "Visits", visits_path, class: "underline" %>
+      </nav>
+
       <%= yield %>
     </div>
   </body>
